--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "http://chachoariel.github.io/pilis-mod3-alfaro-diaz",
+  "homepage": "http://chachoariel.github.io/pilis-mod3-alfaro-diaz/",
   "name": "pilis-mod3-alfaro-diaz",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
