--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://chachoariel.github.io/pilis-mod3-alfaro-diaz/",
+  "homepage": "http://chachoariel.github.io/pilis-mod3-alfaro-diaz/#",
   "name": "pilis-mod3-alfaro-diaz",
   "version": "0.1.0",
   "private": false,
